--- a/README
+++ b/README
@@ -1,1 +1,50 @@
-Sinatra app for Todo webapp
+# ToDo App Tracker
+
+[Check it out here](https://todolist-sinatra-b00319384f84.herokuapp.com/lists)
+
+## Introduction
+
+Welcome to the ToDo App Tracker! This simple yet powerful application helps you organize your tasks and manage your to-do list efficiently. It is built using Ruby, Sinatra, jQuery, JavaScript, and ERB.
+
+## Features
+
+**User-friendly Interface**: The application provides an intuitive and easy-to-use interface for managing your tasks.
+**Task Creation and Deletion**: Easily add new tasks to your to-do list and delete tasks that are completed or no longer needed.
+**Task Status Updates**: Mark tasks as completed or update their status to keep track of your progress.
+**Responsive Design**: The app is designed to work seamlessly on various devices, allowing you to manage your tasks on the go.
+
+## Getting Started
+
+### Prerequisites
+Make sure you have the following installed on your machine:
+
+Ruby
+Sinatra gem
+Bundler gem
+jQuery
+Web browser (Google Chrome, Mozilla Firefox, Safari, etc.)
+
+### Installation
+Clone the repository:
+```bash
+git clone https://github.com/your-username/todo-app.git
+```
+
+Navigate to the project directory:
+```bash
+cd todo-app
+```
+
+Install dependencies:
+```bash
+bundle install
+```
+
+### Usage
+Start the application:
+```bash
+ruby app.rb
+```
+
+Open your web browser and go to `http://localhost:4567`.
+Start managing your tasks! Enjoy :)
